z-index issue fixed

--- a/src/templatemanager/base/chatContainer/chatContainer.scss
+++ b/src/templatemanager/base/chatContainer/chatContainer.scss
@@ -92,8 +92,13 @@
 	}
 }
 .chat-window-main-section.retail-assist-theme{
+  position: fixed;
   height: calc(100% - 50px);
   bottom: 20px;
+  z-index: 9999;
+  .chat-widgetwrapper-main-container{
+    background: var(--global-white-bg);
+  }
   .chat-actions-bottom-wraper {
     .actions-contnet-data{
       height: 100%;
